# Stack-Compass

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
notebook/: 01_analisis.ipynb
notebook/.ipynb_checkpoints/: 01_analisis-checkpoint.ipynb
src/: clean.py  load.py  metrics.py  visualization.py
